--- a/.config/albert/albert.conf
+++ b/.config/albert/albert.conf
@@ -11,6 +11,7 @@ showCentered=true
 showTray=true
 terminal=gnome-terminal
 theme=Numix
+warnAboutNonGraciousQuit=false
 
 [Files]
 Files\scan_interval=60
